Fix alignwide/full in groups outside content
Now that we have group/cover blocks for before header, footer, etc, the content-sidebar stuff breaks the max-width. This commit fixes all that.

Also removes alignfull styling on sidebar layouts which closes https://github.com/maithemewp/mai-engine/issues/98

--- a/assets/scss/components/blocks/_cover.scss
+++ b/assets/scss/components/blocks/_cover.scss
@@ -11,29 +11,12 @@
 	&.alignfull {
 		padding-right: var(--side-spacing);
 		padding-left: var(--side-spacing);
-
-		@include mq(lg) {
-
-			.content-sidebar &,
-			.sidebar-content & {
-				--content-max-width: calc(100vw - var(--sidebar-width) - var(--content-sidebar-gap) - (var(--side-spacing) * 3));
-			}
-
-		}
-
-		@include mq(xl) {
-
-			.content-sidebar &,
-			.sidebar-content & {
-				--content-max-width: calc(var(--breakpoint-xl) - var(--sidebar-width) - var(--content-sidebar-gap) - var(--side-spacing));
-			}
-		}
 	}
 }
 
 .wp-block-cover__inner-container {
 	width: 100% !important;
-	max-width: var(--content-max-width) !important;
+	max-width: var(--inner-max-width, var(--breakpoint-xl));
 	margin-right: auto;
 	margin-left: auto;
 
